--- a/DachyWeb/appsettings.json
+++ b/DachyWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ACER\\SQLEXPRESS;Database=DachyWeb;Trusted_Connection = True; TrustServerCertificate = True;"
+  }
 }
